--- a/tp1_chagas/src/main/webapp/WEB-INF/jspf/menugrande.jspf
+++ b/tp1_chagas/src/main/webapp/WEB-INF/jspf/menugrande.jspf
@@ -1,6 +1,6 @@
 <%-- Comentário Scriptlet--%>
 <%@ page pageEncoding="UTF-8" %>
-<h2>Hello World!</h2>
-<div style="background: black; color: white">
+<div style="background: black; color: green">
     <h1>MEU SITE</h1>
+    <h4>Aprendendo Java Web</h4>
 </div>
